Fix .wrapper's width being too small.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -118,7 +118,7 @@
 /* Page wrapper */
 .wrapper {
     margin: 0 auto;
-    max-width: $screen-sm-min;
+    max-width: $screen-lg;
     padding: 0 $grid-gutter-width $grid-gutter-width $grid-gutter-width;
 }
 // Wide wrapper used in admin pages.
